@@ -1,8 +1,9 @@
 lilv (0.24.11) unstable;
 
   * Fix potential memory error when joining filesystem paths
+  * Fix unlikely undefined behavior when saving state
 
- -- David Robillard <d@drobilla.net>  Wed, 11 Nov 2020 00:02:31 +0000
+ -- David Robillard <d@drobilla.net>  Wed, 11 Nov 2020 16:12:07 +0000
 
 lilv (0.24.10) stable;
 
